feat/Search/category-by-name